--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ua.com.company.division</groupId>
-    <artifactId>task4_division</artifactId>
+    <artifactId>division</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
